--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>PROJECT 1</title>
 </head>
 <body>
@@ -12,6 +13,8 @@
         </div>
         <div class="slackDisplayImage">
             <img src="mypic.jpg" alt="ALIYU ISMAIL BARDE">
+            <div id="currentDayOfTheWeek"></div>
+            <div id="currentUTCTime"></div>
             <H6 class="myTrack">FRONT_END</H6>
             <div class="githubURL">
             <P><a href="">Source Code</a></P>
@@ -20,5 +23,7 @@
         </div>
 
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
